--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "expo": "~52.0.37",
     "expo-blur": "^14.0.3",
     "expo-status-bar": "~2.0.1",
