Update app with new features and improvements

--- a/app.json
+++ b/app.json
@@ -9,6 +9,23 @@
         "projectId": "d7637a68-3704-4b84-a355-c39f8eb21e3d"
       }
     },
-    "owner": "jamalondon97"
+    "owner": "jamalondon97",
+    "android": {
+      "package": "com.jamalondon97.thecollective"
+    },
+    "ios": {
+      "bundleIdentifier": "com.jamalondon97.thecollective"
+    },
+    "developmentClient": {
+      "silentLaunch": true
+    },
+    "developer": {
+      "tool": "expo-cli",
+      "hostType": "tunnel"
+    },
+    "runtimeVersion": "1.0.0",
+    "updates": {
+      "url": "https://u.expo.dev/d7637a68-3704-4b84-a355-c39f8eb21e3d"
+    }
   }
 }
