--- a/eas.json
+++ b/eas.json
@@ -8,8 +8,8 @@
       "developmentClient": true,
       "distribution": "internal"
     },
-    "simulator": {
-      "distribution": "internal",
+    "ios-simulator": {
+      "extends": "development",
       "ios": {
         "simulator": true
       }
