--- a/package.json
+++ b/package.json
@@ -12,22 +12,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^4.1.3",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
-    "expo": "~52.0.37",
+    "expo": "^52.0.46",
     "expo-blur": "^14.0.3",
+    "expo-dev-client": "~5.0.19",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
+    "react-native-calendars": "^1.1310.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-redux": "^9.2.0"
+    "react-native-splash-screen": "^3.3.0",
+    "react-native-wheel-picker-android": "^2.0.6",
+    "react-redux": "^9.2.0",
+    "expo-splash-screen": "~0.29.24"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
