--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -146,6 +146,15 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'androidx.core:core:1.9.0'
+        force 'androidx.core:core-ktx:1.9.0'
+        force 'com.android.support:support-v4:28.0.0'
+        force 'com.android.support:support-compat:28.0.0'
+    }
+}
+
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
