--- a/package.json
+++ b/package.json
@@ -25,19 +25,18 @@
     "@reduxjs/toolkit": "^2.6.1",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
-    "expo": "^52.0.46",
-    "expo-blur": "^14.0.3",
-    "expo-dev-client": "~5.0.19",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-updates": "~0.27.4",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-splash-screen": "^3.3.0",
-    "react-native-wheel-picker-android": "^2.0.6",
+    "expo": "^53.0.7",
+    "expo-blur": "~14.1.4",
+    "expo-dev-client": "~5.1.8",
+    "expo-image-picker": "^16.1.4",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.12",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
