Major refactor: Update Android/iOS config, remove unused files, refactor event creation flow, update styles, improve user/prayer request logic, and update dependencies for Expo 53.0.9 and related packages.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -86,9 +86,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.jamalondon97.thecollective'
+    namespace 'com.OneCrossing.theCollective'
     defaultConfig {
-        applicationId 'com.jamalondon97.thecollective'
+        applicationId 'com.OneCrossing.theCollective'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
