--- a/package.json
+++ b/package.json
@@ -1,48 +1,47 @@
 {
-  "name": "thecollective",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "start": "npx expo start --dev-client",
-    "start:clear": "npx expo start --clear",
-    "start:tunnel": "npx expo start --tunnel",
-    "start:clear-tunnel": "npx expo start --clear --tunnel",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@expo/ngrok": "^4.1.3",
-    "@invertase/react-native-apple-authentication": "^2.4.1",
-    "@react-native-async-storage/async-storage": "^2.1.2",
-    "@react-native-community/datetimepicker": "^8.3.0",
-    "@react-native-google-signin/google-signin": "^13.2.0",
-    "@react-native-picker/picker": "^2.11.0",
-    "@react-navigation/bottom-tabs": "^7.2.1",
-    "@react-navigation/native": "^7.0.15",
-    "@react-navigation/native-stack": "^7.2.1",
-    "@react-navigation/stack": "^7.1.2",
-    "@reduxjs/toolkit": "^2.6.1",
-    "@supabase/supabase-js": "^2.49.4",
-    "axios": "^1.8.4",
-    "expo": "^53.0.7",
-    "expo-blur": "~14.1.4",
-    "expo-dev-client": "~5.1.8",
-    "expo-image-picker": "^16.1.4",
-    "expo-splash-screen": "~0.30.8",
-    "expo-status-bar": "~2.2.3",
-    "expo-updates": "~0.28.12",
-    "react": "19.0.0",
-    "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
-    "react-redux": "^9.2.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-react": "^7.26.3",
-    "dependency-cruiser": "^16.10.1"
-  },
-  "private": true
+	"name": "thecollective",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"start": "npx expo start --dev-client",
+		"start:clear": "npx expo start --clear",
+		"start:tunnel": "npx expo start --tunnel",
+		"start:clear-tunnel": "npx expo start --clear --tunnel",
+		"android": "expo run:android",
+		"ios": "expo run:ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@expo/ngrok": "^4.1.3",
+		"@invertase/react-native-apple-authentication": "^2.4.1",
+		"@react-native-async-storage/async-storage": "^2.1.2",
+		"@react-native-community/datetimepicker": "^8.3.0",
+		"@react-native-google-signin/google-signin": "^13.2.0",
+		"@react-native-picker/picker": "^2.11.0",
+		"@react-navigation/bottom-tabs": "^7.2.1",
+		"@react-navigation/native": "^7.0.15",
+		"@react-navigation/native-stack": "^7.2.1",
+		"@react-navigation/stack": "^7.1.2",
+		"@reduxjs/toolkit": "^2.6.1",
+		"@supabase/supabase-js": "^2.49.4",
+		"axios": "^1.8.4",
+		"expo": "53.0.9",
+		"expo-blur": "~14.1.4",
+		"expo-dev-client": "~5.1.8",
+		"expo-image-picker": "^16.1.4",
+		"expo-splash-screen": "~0.30.8",
+		"expo-status-bar": "~2.2.3",
+		"expo-updates": "~0.28.12",
+		"react": "19.0.0",
+		"react-native": "0.79.2",
+		"react-native-gesture-handler": "~2.24.0",
+		"react-native-safe-area-context": "5.4.0",
+		"react-native-screens": "~4.10.0",
+		"react-redux": "^9.2.0"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0",
+		"@babel/preset-react": "^7.26.3"
+	},
+	"private": true
 }
